crates/pandalang/src/snapshots/pandalang__parser__tests__parses_exprs@app__id.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/app/id.panda
---
Ok(
    App(
        App {
            fun: Fun(
                Fun {
                    arg: "x",
                    body: Var(
                        Var {
                            name: "x",
                        },
                    ),
                },
            ),
            arg: Int(
                Int {
                    n: 3,
                },
            ),
        },
    ),
)
